refactor : #305 SonarQube에 의한 로직 수정  (Java +16 Stream.toList() 권장 ) description 네이밍 변경